二次开发资料/Sample Codes/M1_C#/Mifare1K/bin/Release/hfrdapi.h

typedef void* HID_DEVICE;
DECLSPEC int WINAPI Sys_GetDeviceNum(WORD vid, WORD pid, DWORD *pNum);
DECLSPEC int WINAPI Sys_GetHidSerialNumberStr(DWORD deviceIndex,
                                              WORD vid,
                                              WORD pid,
                                              char *deviceString,
                                              DWORD deviceStringLength);
DECLSPEC int WINAPI Sys_Open(HID_DEVICE *device,
                             DWORD index,
                             WORD vid,
                             WORD pid);
DECLSPEC BOOL WINAPI Sys_IsOpen(HID_DEVICE device);
DECLSPEC int WINAPI Sys_Close(HID_DEVICE *device);
DECLSPEC int WINAPI Sys_SetLight(HID_DEVICE device, BYTE color);
DECLSPEC int WINAPI Sys_SetBuzzer(HID_DEVICE device, BYTE msec);
DECLSPEC int WINAPI Sys_SetAntenna(HID_DEVICE device, BYTE mode);
DECLSPEC int WINAPI Sys_InitType(HID_DEVICE device, BYTE type);
//=====================================================================================
//============================== ISO14443A function ===================================
//=====================================================================================
DECLSPEC int WINAPI TyA_Request(HID_DEVICE device, BYTE mode , WORD *pTagType);
DECLSPEC int WINAPI TyA_Halt(HID_DEVICE device);
//============================== M1 function
DECLSPEC int WINAPI TyA_Anticollision(HID_DEVICE device,
                                      BYTE bcnt,
                                      BYTE *pSnr,
                                      BYTE *pLen);
DECLSPEC int WINAPI TyA_Select(HID_DEVICE device,
                               BYTE *pSnr,
                               BYTE snrLen,
                               BYTE *pSak);
DECLSPEC int WINAPI TyA_CS_Authentication2(HID_DEVICE device,
                                           BYTE mode,
                                           BYTE block,
                                           BYTE *pKey);
DECLSPEC int WINAPI TyA_CS_Read(HID_DEVICE device,
                                BYTE block,
                                BYTE *pData,
                                BYTE *pLen);
DECLSPEC int WINAPI TyA_CS_Write(HID_DEVICE device, BYTE block, BYTE *pData);
DECLSPEC int WINAPI TyA_CS_InitValue(HID_DEVICE device, BYTE block, long value);
DECLSPEC int WINAPI TyA_CS_ReadValue(HID_DEVICE device, BYTE block, long *pValue);
DECLSPEC int WINAPI TyA_CS_Decrement(HID_DEVICE device, BYTE block, long value);
DECLSPEC int WINAPI TyA_CS_Increment(HID_DEVICE device, BYTE block, long value);
DECLSPEC int WINAPI TyA_CS_Restore(HID_DEVICE device, BYTE block);
DECLSPEC int WINAPI TyA_CS_Transfer(HID_DEVICE device, BYTE block);